--- a/foundation-sites-develop/scss/_global.scss
+++ b/foundation-sites-develop/scss/_global.scss
@@ -25,32 +25,35 @@ $global-lineheight: 1.5 !default;
 /// Colors used for buttons, callouts, links, etc. There must always be a color called `primary`.
 /// @type Map
 $foundation-palette: (
-  "primary": #1779ba,
-  "secondary": #767676,
+  "primary": #fe4a49,
+  "secondary": #006B5B,
   "success": #3adb76,
   "warning": #ffae00,
   "alert": #cc4b37,
+  "greendark": #10c56e,
+  "greenlight": #53dd6c,
+  "redcherry": #BB3D52,
 ) !default;
 
 /// Color used for light gray UI items.
 /// @type Color
-$light-gray: #e6e6e6 !default;
+$light-gray: #d7d7d7 !default;
 
 /// Color used for medium gray UI items.
 /// @type Color
-$medium-gray: #cacaca !default;
+$medium-gray: #878787 !default;
 
 /// Color used for dark gray UI items.
 /// @type Color
-$dark-gray: #8a8a8a !default;
+$dark-gray: #474747 !default;
 
 /// Color used for black ui items.
 /// @type Color
-$black: #0a0a0a !default;
+$black: #272727 !default;
 
 /// Color used for white ui items.
 /// @type Color
-$white: #fefefe !default;
+$white: #ffffff !default;
 
 /// Background color of the body.
 /// @type Color
@@ -62,7 +65,7 @@ $body-font-color: $black !default;
 
 /// Font stack of the body.
 /// @type List
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif !default;
+$body-font-family: 'Source Sans Pro', 'Readex Pro', sans-serif !default;
 
 /// Set to `true` to enable safe padding on the body for non-rectangular devices (i.e. phones with notches)
 /// @type Boolean
@@ -74,11 +77,11 @@ $body-antialiased: true !default;
 
 /// Global value used for margin on components.
 /// @type Number
-$global-margin: 1rem !default;
+$global-margin: 0px !default;
 
 /// Global value used for padding on components.
 /// @type Number
-$global-padding: 1rem !default;
+$global-padding: 0px !default;
 
 /// Global value used for positioning on components.
 /// @type Number
