--- a/Base0/anveshicardstyle.css
+++ b/Base0/anveshicardstyle.css
@@ -1,123 +1,93 @@
+body{
+  background-color: #272727;
+  margin: 0px;
+  padding: 0px;
+}
+
+img{
+  max-height: 100%;
+  max-width: 100%;
+  margin: 0px;
+}
+hr{
+  height: 1px;
+  width: 240%;
+  margin-left: -70%;
+  background-color: #fe4a49;
+  border: 0px;
+  opacity: 0;
+}
+
 .maincan {
   color: #272727;
-  height: 550px;
-  width: 340px;
-  display: flex;
-  flex-wrap: wrap;
+  height: 440px;
+  width: 320px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+  "card";
   font-family: 'Source Sans Pro', sans-serif;
-  align-items: start;
-  align-content: start;
+  overflow: hidden;
 }
 
 .card {
-  min-width: 100%;
-  margin: auto;
-  z-index: 1;
-  background-color: white;
-  height: 500px !important;
-  transition: 0.3s;
-  border-radius: 2px;
-  box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.2);
-  display: grid; 
+  max-width: 100%;
+  max-height: 100%;
+  display: grid;
+  grid-area: card; 
   grid-template-columns: 1fr; 
-  grid-template-rows: 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 0.4fr 1fr; 
   gap: 0px 0px; 
   grid-template-areas: 
     "card-header"
     "toparea"
     "card-main"; 
-  align-content: start; 
-  align-items: start; 
-}
-.card.is-active{
-  min-width: 100%;
-  margin: auto;
+  margin: 0;
   z-index: 1;
   background-color: white;
-  height: 500px !important;
   transition: 0.3s;
   border-radius: 2px;
   box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.2);
-  display: grid; 
-  grid-template-columns: 1fr; 
-  grid-template-rows: 1fr 1fr; 
-  gap: 0px 0px; 
-  grid-template-areas: 
-    "toparea"
-    "card-main"; 
-  align-content: start; 
-  align-items: start; 
+  overflow: hidden;
 }
 
-.card.is-active .card-header{
-  opacity: 0;
-  height: 0;
-  align-self: start;
-  border: 1px solid black;  
-}
 .card-header {
   display: grid; 
+  grid-area: card-header;
   grid-template-columns: 1fr; 
   grid-template-rows: 1fr; 
-  gap: 0px 0px; 
   grid-template-areas: 
     "rtaimg"; 
-  grid-area: card-header; 
-  width: 100%;
+  gap: 0px 0px;
   transition: 0.3s; 
-  border: 1px solid black;  
+  background-color: white;
+  overflow: hidden;
 }
 .rtaimg{
-  justify-self: stretch; 
-  align-self: stretch; 
+  display: grid;
   grid-area: rtaimg;
-  border: 1px solid black;   
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas:
+  ".";
+  gap: 0px 0px;
+  object-fit: contain;
 }
+
 .toparea{
   display: grid; 
+  grid-area: toparea;
   grid-template-columns: 1fr; 
-  grid-template-rows: 1fr 1fr; 
+  grid-template-rows: 0.8fr 0.2fr; 
   gap: 0px 0px; 
   grid-template-areas: 
-    "rta-title"
-    "rta-subtitle"; 
-  align-items: start; 
-  align-content: start;
-  align-self: start; 
-  justify-self: center;
-  grid-area: toparea;
+    "rtacard-title"
+    "rtacard-subtitle"; 
   padding: 0px;
   margin: 0px; 
-  border: 1px solid black;
-}
-img{
- max-width: 100%;
- max-height: 90%;
-}
-.card.is-active img{
-height: 0px;
-opacity: 0;
-}
-.card.is-active .rtaimg{
-  height: 0px;
-}
-.card.is-active .toparea{
-  align-items: start; 
-  align-content: start;
-  align-self: start; 
-  padding: 0px;
-  margin: 0px;
-  border: 1px solid black;  
-  height: max-content;
-}
-.card.is-active .rtacard-title, .card.is-active .rtacard-subtitle{
-  height: auto;
-  margin: 0px;
-  padding: 0px;
-  align-self: start;
-}
-.card.is-active .card-header{
-  height: 0px;
+  justify-items: center;
+  justify-content: center;
 }
 
 .rtacard-title {
@@ -126,10 +96,13 @@ opacity: 0;
   font-size: 32px;
   font-weight: 700;
   text-align: center;
+  padding-top: 24px;
+  padding-bottom: 4px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas:
+  ".";
   color: #fe4a49;
-  margin: 0;
-  padding: 0;
-  align-self: start;
 }
 
 .rtacard-subtitle {
@@ -140,47 +113,53 @@ opacity: 0;
   opacity: 1;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  text-align: center;
   margin: 0;
-  padding: 0;
-  align-self: start;
 }
 
 .card-main {
-  align-self: stretch; 
   grid-area: card-main;
-  align-items: start; 
-}
-.card.is-active .card-main{
-  align-self: stretch; 
-  grid-area: card-main;
-  align-items: start; 
-  align-content: start;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 0.2fr;
+  grid-template-areas:
+  "card-section"
+  "card-buttons";
 }
 
-.rtacard-section {
-  font-weight: 700;
-  font-size: 18px;
-  margin-bottom: 8px;
-  color: #878787;
+.card-section {
+  display: none;
 }
-.card.is-active .card-content{
-  align-items: start; 
-  align-content: start;
+.rtacard-section {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  color: #474747;
+  text-align: center;
+  grid-area: rtacard-section;
 }
 
 .card-content {
-  padding: 0px 20px 20px 20px;
-  align-items: start; 
-  align-content: start;
-}
-
-.rtacard-excerpt {
+  padding: 8px 24px;
   line-height: 1.4;
   color: #474747;
-  font-size: 16px;
+  font-size: 1.125rem;
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
+  text-align: center;
+  align-items: start; 
+  align-content: start;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.1fr 1fr;
+  grid-template-areas: 
+  "rtacard-section"
+  "rtacardsection-part1";
+  gap: 0px 0px;
+}
+#lastcardcontent{
+  justify-items: center;
 }
 
 .card-buttons {
@@ -206,19 +185,51 @@ opacity: 0;
   transition: 0.3s;
   font-weight: 700;
   outline: 0;
-  border-bottom: 3px solid transparent;
+  border-bottom: 3px solid white;
 }
+.card.is-active{
+  min-width: 100%;
+  margin: 0;
+  z-index: 1;
+  background-color: white;
+  max-height: 100%;
+  min-height: 100%;
+  transition: 0.3s;
+  border-radius: 2px;
+  box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.2);
+  display: grid; 
+  grid-template-columns: 1fr; 
+  grid-template-rows: 0.1fr 1fr; 
+  gap: 0px 0px; 
+  grid-template-areas: 
+    "toparea"
+    "card-main"; 
+}
+
+.card.is-active .card-header{
+  opacity: 0;
+  height: 0; 
+}
+
+.card.is-active .rtaimg{
+  height: 0px;
+}
+
+.card.is-active .card-content{
+  padding: 0px 16px 8px 16px;
+}
+.card.is-active .rtacard-section{
+  margin-top: 0px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
 .card-buttons button.is-active, .card-buttons button:hover {
   color: #272727;
   border-bottom: 3px solid #fe4a49;
   background-color: white !important;
 }
 
-.card-section {
-  display: none;
-  align-items: start; 
-  align-content: start;
-}
 .card-section.is-active {
   display: block;
   -webkit-animation: fadeIn 0.6s both;
@@ -245,44 +256,43 @@ opacity: 0;
   }
 }
 .card-timeline {
-  margin-top: 30px;
-  position: relative;
-  height: 200px;
-  overscroll-behavior-y: scroll;
+  margin-top: 0px;
+  overflow-y: scroll;
+  grid-area: rtacardsection-part1;
+  max-height: 290px;
+  border: 1px solid #d7d7d7;
+  padding: 8px;
 }
 .card-timeline:after {
   background: linear-gradient(to top, rgba(134, 214, 243, 0) 0%, #fe4a49 100%);
   content: "";
-  left: 42px;
+  left: 78px;
   width: 2px;
-  top: 0;
+  top: 40px;
   height: 100%;
   position: absolute;
-  content: "";
 }
 
 .card-item {
   position: relative;
-  padding-left: 60px;
-  padding-right: 20px;
-  padding-bottom: 30px;
   z-index: 1;
+  padding-left: 32px;
+  padding-right: 8px;
 }
 .card-item:last-child {
   padding-bottom: 5px;
 }
 .card-item:after {
   content: attr(data-year);
-  width: 10px;
   position: absolute;
   top: 0;
-  left: 37px;
+  left: 48px;
   width: 8px;
   height: 8px;
   line-height: 0.6;
   border: 2px solid #fff;
-  font-size: 11px;
-  text-indent: -35px;
+  font-size: 12px;
+  text-indent: -56px;
   border-radius: 50%;
   color: rgba(134, 134, 134, 0.7);
   background: linear-gradient(to bottom, #BB3D52 0%, #fe4a49 100%);
@@ -290,24 +300,17 @@ opacity: 0;
 
 .card-item-title {
   font-weight: 400;
-  font-size: 14px;
-  margin-bottom: 5px;
-}
-
-.card-item-desc {
   font-size: 12px;
-  color: #474747;
-  line-height: 1.4;
+  margin-bottom: 8px;
+  margin-left: 40px;
+  text-align: left;
 }
 
-.card-contact-wrapper {
-  margin-top: 20px;
-}
 
 .card-contact {
   display: flex;
   align-items: center;
-  font-size: 16px;
+  font-size: 18px;
   color: #474747;
   line-height: 1.5;
   cursor: pointer;
@@ -323,7 +326,6 @@ opacity: 0;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
   color: #fff;
   padding: 12px 16px;
-  width: 100%;
   border-radius: 5px;
   margin-top: 25px;
   cursor: pointer;
@@ -333,4 +335,34 @@ opacity: 0;
 }
 .contact-me:hover {
   background: linear-gradient(to right, #fe4a49 100%, #BB3D52 4%);
+}
+#registerarea{
+  margin: 24px 20px 0px 20px;
+  font-size: 24px;
+  letter-spacing: 0px;
+}
+.rtacardsection-part2{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+  "end-button-1"
+  "end-button-2"
+  "end-button-3";
+  gap: 0px 0px;
+  overflow: hidden;
+  justify-items: stretch;
+}
+
+#endbutton1{
+  grid-area: end-button-1;
+  width: 200px;
+}
+#endbutton2{
+  grid-area: end-button-2;
+  width: 200px;
+}
+#endbutton3{
+  grid-area: end-button-3;
+  width: 200px;
 }
