--- a/Base0/minimalstyle.css
+++ b/Base0/minimalstyle.css
@@ -3,6 +3,10 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0px;
+  box-sizing: border-box;
+  padding: 0px;
+  top: 0;
+  left: 0;
 }
 
 img {
@@ -14,12 +18,63 @@ img {
   overflow: hidden;
 }
 
+.rta-primarytext {
+  color: #fe4a49;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.4em;
+}
+
+.bigp {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
 em {
   font-size: 1.5em;
   font-style: normal;
   font-weight: 300;
   line-height: 1.4em;
+  margin: 16px 0px 0px 0px;
+}
+
+h1 {
+  font-size: 5rem;
+  line-height: 1;
+  letter-spacing: -1px;
+  margin: 0;
+}
+h2{
+  font-size: 3.2rem;
   margin: 0px;
+}
+h3{
+  font-size: 2.4rem;
+  margin: 0px;
+}
+
+h4 {
+  font-size: 1.8rem;
+  letter-spacing: 0px;
+  font-weight: 700;
+  margin: 0;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin: 0;
+}
+h6{
+  font-size: 0.8rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin: 0;
+  color: #272727;
+  line-height: 2em;
 }
 
 .rta-maincontainer {
@@ -38,13 +93,52 @@ em {
   width: 100vw;
   margin: 0px;
 }
+.rta-2row10{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.1fr 1fr;
+  grid-template-areas:
+  "rta-2row10-10"
+  "rta-2row10-90";
+  gap: 0px 0px; 
+}
+.rta-2row10-10{
+  grid-area: rta-2row10-10;
+}
+.rta-2row10-90{
+  grid-area: rta-2row10-90;
+}
 
 .rta-2col40 {
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
+  grid-template-columns: 0.5fr 1.1fr;
   grid-template-rows: 1fr;
   grid-template-areas:
-    "area-2col40-one area-2col40-two";
+    "rta-2col40-one rta-2col40-two";
+  gap: 0px 0px;
+
+}
+
+.rta-2col40-one {
+  display: grid;
+  grid-area: rta-2col40-one;
+  text-align: left;
+  align-items: start;
+  align-content: start;
+  padding: 64px 16px 16px 48px;
+}
+
+.rta-2col40-two {
+  display: grid;
+  grid-area: rta-2col40-two;
+  text-align: left;
+  align-items: start;
+  align-content: start;
+  margin-right: 32px;
+  max-width: 92%;
+  object-fit: cover;
+  align-items: stretch;
+  align-content: stretch;
 }
 
 .rta-2col75 {
